# TinySightAI

./: .gitignore  FIRST_BOOT_CHECKLIST.md  IMPLEMENTATION_PLAN.md  PROJECT_PLAN.md  README.md
docs/: board-and-camera-comparison.md  camera-options.md  hardware-research-update.md  split-architecture.md  wireless-connectivity.md
enclosure/: camera-unit-body.scad  camera-unit-body.stl  camera-unit-lid.scad  camera-unit-lid.stl
radxa/: README.md
radxa/aa-proxy/: Cargo.toml
radxa/aa-proxy/src/: aap.rs  main.rs  mitm.rs  proxy.rs  tls.rs
radxa/baby-monitor/: app.js  index.html  server.py  style.css
radxa/carplay/: Makefile  main.c
radxa/carplay/airplay/: airplay_audio.c  airplay_audio.h  airplay_fairplay.c  airplay_fairplay.h  airplay_mdns.c  airplay_mdns.h  (+8 more)
radxa/compositor/: Makefile
radxa/config/: bluetooth.conf  dnsmasq.conf  hostapd.conf  journald-volatile.conf
radxa/ota-server/: ota_server.py
radxa/scripts/: bt-agent.py  build-minimal-rootfs.sh  build-ustreamer.sh  install-mpp.sh  ir-led-control.sh  make-readonly.sh  power-manager.sh  setup.sh  trim-os.sh
radxa/web/: config_server.py
t-dongle-s3/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
t-dongle-s3/main/: CMakeLists.txt  ble_control.c  ble_control.h  idf_component.yml  led_status.c  led_status.h  main.c  ota_update.c  ota_update.h  tcp_tunnel.c  tcp_tunnel.h  usb_bridge.c  usb_bridge.h  wifi_sta.c  wifi_sta.h
tests/: test_aap_framing.py  test_baby_monitor_api.py  test_carplay_video_input.py  test_compositor_control.py  test_nal_detection.py  test_ota_server.py  test_tcp_tunnel.py
(+71 files in other folders)
