[package]
name = "aa-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aa-proxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
log = "0.4"
env_logger = "0.11"
bytes = "1"
rcgen = "0.13"
anyhow = "1"
time = { version = "0.3", features = ["formatting"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
